# Lakot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lakot/abstract/: CMakeLists.txt
lakot/abstract/engine/: AEngine.cpp  AEngine.h  AGarbageCollector.cpp  AGarbageCollector.h  ALogger.cpp  ALogger.h
lakot/abstract/graphics/api/: AGraphicsAPI.cpp  AGraphicsAPI.h
lakot/abstract/graphics/camera/: ACamera.cpp  ACamera.h
lakot/abstract/graphics/model/: ABone.cpp  ABone.h  AMaterial.cpp  AMaterial.h  AMesh.cpp  AMesh.h  AModel.cpp  AModel.h  ANode.cpp  ANode.h  ATexture.cpp  ATexture.h
lakot/abstract/graphics/shader/: AShader.cpp  AShader.h  AShaderProgram.cpp  AShaderProgram.h
lakot/abstract/graphics/window/: AWindow.cpp  AWindow.h
lakot/abstract/layer/: ALayer.cpp  ALayer.h
lakot/abstract/render/: ARenderable.cpp  ARenderable.h  ARenderer.cpp  ARenderer.h  AVertexArrayObject.cpp  AVertexArrayObject.h
lakot/abstract/resource/asset/: AAsset.cpp  AAsset.h
lakot/abstract/resource/entity/: AEntity.cpp  AEntity.h
lakot/abstract/resource/loader/: ALoader.cpp  ALoader.h
lakot/abstract/scene/: AScene.cpp  AScene.h
lakot/core/: CMakeLists.txt
lakot/core/engine/: Engine.cpp  Engine.h  EngineFactory.cpp  EngineFactory.h  GarbageCollector.cpp  GarbageCollector.h  GarbageCollectorFactory.cpp  GarbageCollectorFactory.h  Logger.cpp  Logger.h
lakot/core/geometry/: BoundingBox.h
lakot/core/graphics/api/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPIFactory.cpp  GraphicsAPIFactory.h  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLESAPI.cpp  OpenGLESAPI.h
lakot/core/graphics/camera/: Camera.cpp  Camera.h  CameraFactory.cpp  CameraFactory.h  FPSCamera.cpp  FPSCamera.h
lakot/core/graphics/geometry/: Box.cpp  Box.h
lakot/core/graphics/shader/: OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h
lakot/core/graphics/window/: Window.cpp  Window.h  WindowEGL.cpp  WindowEGL.h  WindowFactory.cpp  WindowFactory.h  WindowGLFW.cpp  WindowGLFW.h
lakot/core/layer/: Layer.cpp  Layer.h  LayerFactory.cpp  LayerFactory.h
lakot/core/render/: OpenGLESRenderer.cpp  OpenGLESRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  ShaderSource.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
lakot/core/resource/asset/: BoneAsset.cpp  BoneAsset.h  MaterialAsset.cpp  MaterialAsset.h  MeshAsset.cpp  MeshAsset.h  ModelAsset.cpp  ModelAsset.h  NodeAsset.cpp  NodeAsset.h  TextureAsset.cpp  TextureAsset.h
lakot/core/resource/entity/: Entity.cpp  Entity.h
lakot/core/resource/loader/: Loader.cpp  Loader.h  LoaderFactory.cpp  LoaderFactory.h  MeshLoader.cpp  MeshLoader.h  (+4 more)
lakot/core/scene/: Scene.cpp  Scene.h
lakot/interface/: CMakeLists.txt
lakot/interface/controls/: IMouse.h
lakot/interface/engine/: IEngine.h  IGarbageCollector.h  ILogger.h  IObject.h
lakot/interface/layer/: ILayer.h
lakot/utilities/: AsynchronousProcessExecutor.cpp  AsynchronousProcessExecutor.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  DataContainer.cpp  DataContainer.h  DataContainer.hpp  FileManager.cpp  FileManager.h  Object.h  SynchronousProcessExecutor.cpp  SynchronousProcessExecutor.h  Timer.cpp  Timer.h  Type.h
src/client/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.h  Session.cpp  Session.h  main.cpp
src/client/controller/: AuthController.cpp  AuthController.h
src/connection/: CMakeLists.txt  MessageDispatcher.h  NetworkClient.h  NetworkServer.h  NetworkSession.h  SessionRegistry.h  connection_global.h
src/connection/proto/: common.proto  connection.proto  protocol.proto
src/core/: CMakeLists.txt  PlatformFactory.cpp  PlatformFactory.h  WindowsPlatform.cpp  WindowsPlatform.h  platform.cpp  platform.h
src/core/graphicsAPI/: GraphicsAPI.cpp  GraphicsAPI.h  OpenGLAPI.cpp  OpenGLAPI.h  graphicsapi.cpp  graphicsapi.h  openglapi.cpp  openglapi.h
src/core/helper/: AssimpToGLMHelper.cpp  AssimpToGLMHelper.h  FileManager.cpp  FileManager.h  GLMConverter.cpp  GLMConverter.h  Timer.cpp  Timer.h  WindowManager.cpp  WindowManager.h  timer.cpp  timer.h  windowmanager.cpp  windowmanager.h
src/core/interface/: IAnimated.cpp  IAnimated.h  IAnimation.cpp  IAnimation.h  IBone.cpp  IBone.h  IGuiElement.cpp  IGuiElement.h  INode.cpp  INode.h  IScene.cpp  IScene.h  ITransformable.cpp  ITransformable.h
src/core/platform/: Platform.cpp  Platform.h  PlatformFactory.cpp  PlatformFactory.h  WindowsPlatform.cpp  WindowsPlatform.h
src/core/resource/: AnimationResource.cpp  AnimationResource.h  BoneResource.cpp  BoneResource.h  KeyFrameChannel.cpp  KeyFrameChannel.h  KeyFrameChannelResource.cpp  KeyFrameChannelResource.h  MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  NodeResource.cpp  NodeResource.h  ResourceManager.cpp  ResourceManager.h  TextureResource.cpp  TextureResource.h  boneresource.cpp  boneresource.h  meshresource.cpp  meshresource.h  modelloader.cpp  modelloader.h  modelresource.cpp  modelresource.h  noderesource.cpp  noderesource.h  resourcemanager.cpp  resourcemanager.h  textureloader.cpp  textureloader.h  textureresource.cpp  textureresource.h
src/game/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
src/game/gui/: GuiLayer.cpp  GuiLayer.h  Panel.h  PanelLoader.cpp  PanelLoader.h
src/game/network/: NetworkManager.cpp  NetworkManager.h
src/game/scene/: LoginScene.cpp  LoginScene.h  Scene.h  SceneManager.cpp  SceneManager.h  WorldScene.cpp  WorldScene.h
src/server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/server/database/: DatabaseConfig.h  DatabaseManager.cpp  DatabaseManager.h
src/server/network/: NetworkManager.cpp  NetworkManager.h
src/utils/: AsynchronousTaskExecutor.cpp  AsynchronousTaskExecutor.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  DataContainer.hpp  FileManager.cpp  GarbageCollector.cpp  GarbageCollector.h  Image.h  SynchronousTaskExecutor.cpp  SynchronousTaskExecutor.h  Task.hpp  ThreadSafeQueue.hpp  Timer.cpp  Timer.h  Type.h  Variable.h  utils_global.h
(+206 files in other folders)
